; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_stop_machine.c_cpu_stop_init_done.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_stop_machine.c_cpu_stop_init_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpu_stop_done = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cpu_stop_done*, i32)* @cpu_stop_init_done to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cpu_stop_init_done(%struct.cpu_stop_done* %0, i32 %1) #0 {
  %3 = alloca %struct.cpu_stop_done*, align 8
  %4 = alloca i32, align 4
  store %struct.cpu_stop_done* %0, %struct.cpu_stop_done** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.cpu_stop_done*, %struct.cpu_stop_done** %3, align 8
  %6 = call i32 @memset(%struct.cpu_stop_done* %5, i32 0, i32 8)
  %7 = load %struct.cpu_stop_done*, %struct.cpu_stop_done** %3, align 8
  %8 = getelementptr inbounds %struct.cpu_stop_done, %struct.cpu_stop_done* %7, i32 0, i32 1
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @atomic_set(i32* %8, i32 %9)
  %11 = load %struct.cpu_stop_done*, %struct.cpu_stop_done** %3, align 8
  %12 = getelementptr inbounds %struct.cpu_stop_done, %struct.cpu_stop_done* %11, i32 0, i32 0
  %13 = call i32 @init_completion(i32* %12)
  ret void
}

declare dso_local i32 @memset(%struct.cpu_stop_done*, i32, i32) #1

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @init_completion(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
